--- a/개발일지.md
+++ b/개발일지.md
@@ -33,7 +33,10 @@
 ``` 
 ### 트러블슈팅
 #### cannot find package from $GOPATH
+![cannot find package from $GOPATH](https://user-images.githubusercontent.com/95270406/171563163-2eb9d1f0-ac60-4867-aefb-7983b03cc7ed.jpg)
 - 분명 환경변수 잘 설정한 것 같은데 go파일이 빌드되지 않는 문제 발생..
 - 처음에는 'cannot find package from gopath'로만 구글링 -> 마땅한 해결방법 못찾음
 - cannot find package "github.com/hyperleder/fabric/core/chaincode/shim" 로 구글링했더니 hyperleder를 hyperledger로 고쳐서 검색해줌! -> 결국 오타때문에 빌드가 안되는 거였음..
+- 간단한 체인코드 만들기 성공!!
+![잘 빌드됨](https://user-images.githubusercontent.com/95270406/171563204-70af0e05-2007-4ec4-84f9-40e3fb195925.jpg)
 
