--- a/개발일지.md
+++ b/개발일지.md
@@ -40,3 +40,34 @@
 - 간단한 체인코드 만들기 성공!!
 ![잘 빌드됨](https://user-images.githubusercontent.com/95270406/171563204-70af0e05-2007-4ec4-84f9-40e3fb195925.jpg)
 
+## 6/6(월)
+### SDK for Node.js를 이용한 응용 프로그램 개발
+- 이라 쓰고 책 코드 그대로 쓰기라 읽는다..ㅎ 여기있는 Node.js를 코드를 내가 직접 짤 수 있는 건 아니지만, 책 내용을 처리 흐름을 공부할 수 있었다 
+#### 노드 다운그레이드 하기
+Node.js v10으로 했더니 deprecated된 함수들 많아서 v8로 낮추기로 결정
+![노드 다운그레이드 하기!](https://user-images.githubusercontent.com/95270406/172213741-05f60eee-1c56-46ae-909e-d3eb2c4841d4.jpg)
+#### Node.js 스크립트 실행
+1) 아래 오류는 블록체인 네트워크의 바뀐 암호키를 적용하지 않았기 때문!
+    - 참고링크: https://stackoverflow.com/questions/48416805/calling-enrollment-endpoint-failed-with-error-error-connect-econnrefused
+![registerUser 실패 - fail to enroll](https://user-images.githubusercontent.com/95270406/172215123-6f3a9218-31d4-493d-a141-6b52b0ba2e42.jpg)
+    - registerUser 성공
+![registerUser 성공](https://user-images.githubusercontent.com/95270406/172215233-d0f2287e-90b7-4b46-8842-1e49a098826d.jpg)
+2) fail to pull fabric-ccenv
+    - 태그가 없었기 때문(참고링크:https://github.com/hyperledger/caliper-benchmarks/issues/121)
+![fail to pull fabric-ccenv](https://user-images.githubusercontent.com/95270406/172215801-9a108876-4cc4-4133-adec-fdb26fd40135.jpg)
+    - deploy 성공
+    ![deploy 성공](https://user-images.githubusercontent.com/95270406/172216020-52ad3547-0803-4bc1-9abb-6245ba9b74ef.jpg)
+    
+#### 프로메테우스 연동
+1) 도커 실행시켜 logspec과 healthz API 호출해보기
+![docker exec -it cli bash에서도 성공](https://user-images.githubusercontent.com/95270406/172216941-c44f0b57-1d2b-4da7-a81c-45ae41ccf1a2.jpg)
+2) 도커 이미지에 프로메테우스 추가
+![도커 이미지에 프로메테우스 추가](https://user-images.githubusercontent.com/95270406/172217401-6afde7a4-bb83-4a30-a597-7022665aa820.jpg)
+3) 프로메테우스 연동 성공
+    - 도커의 모든 로그 파일이 수집되어 모니터링 되고 있다 !
+![프로메테우스 연동 성공](https://user-images.githubusercontent.com/95270406/172217445-0356d4ed-da71-4a93-b54e-ba8ac446c398.jpg)
+
+- 내일 목표 -> 하이퍼레저 익스플로러 연동하여 '블록체인' 모니터링하기
+
+ 
+
