--- a/개발일지.md
+++ b/개발일지.md
@@ -29,8 +29,11 @@
     ├── 
     ├── 
     └── 
-
 ``` 
+#### 참고사항
+ ![peer0과 cli bash 경로다름!!](https://user-images.githubusercontent.com/95270406/173399973-e3825c4e-031c-4829-88e7-9e5686dd7a2b.jpg)
+- peer의 도커 경로는 /opt/gopath/src/github.com/hyperledger/fabric이고, cli bash의 경로는 /etc/hyperledger/configtx
+
 ### 트러블슈팅
 #### cannot find package from $GOPATH
 ![cannot find package from $GOPATH](https://user-images.githubusercontent.com/95270406/171563163-2eb9d1f0-ac60-4867-aefb-7983b03cc7ed.jpg)
@@ -42,7 +45,7 @@
 
 ## 6/6(월)
 ### SDK for Node.js를 이용한 응용 프로그램 개발
-- 이라 쓰고 책 코드 그대로 쓰기라 읽는다..ㅎ 여기있는 Node.js를 코드를 내가 직접 짤 수 있는 건 아니지만, 책 내용을 처리 흐름을 공부할 수 있었다 
+- 이라 쓰고 책 코드 그대로 쓰기라 읽는다..ㅎ 여기있는 Node.js를 코드를 내가 직접 짤 수 있는 건 아니지만, 책 내용을 공부하면서 트랜잭션 처리 흐름을 파악할 수 있었다
 #### 노드 다운그레이드 하기
 Node.js v10으로 했더니 deprecated된 함수들 많아서 v8로 낮추기로 결정
 ![노드 다운그레이드 하기!](https://user-images.githubusercontent.com/95270406/172213741-05f60eee-1c56-46ae-909e-d3eb2c4841d4.jpg)
@@ -68,6 +71,3 @@ Node.js v10으로 했더니 deprecated된 함수들 많아서 v8로 낮추기로
 ![프로메테우스 연동 성공](https://user-images.githubusercontent.com/95270406/172217445-0356d4ed-da71-4a93-b54e-ba8ac446c398.jpg)
 
 - 내일 목표 -> 하이퍼레저 익스플로러 연동하여 '블록체인' 모니터링하기
-
- 
-
