--- a/개발일지.md
+++ b/개발일지.md
@@ -45,7 +45,7 @@
 
 ## 6/6(월)
 ### SDK for Node.js를 이용한 응용 프로그램 개발
-- 이라 쓰고 책 코드 그대로 쓰기라 읽는다..ㅎ 여기있는 Node.js를 코드를 내가 직접 짤 수 있는 건 아니지만, 책 내용을 공부하면서 트랜잭션 처리 흐름을 파악할 수 있었다
+- 책 내용을 공부하면서 Node.js로 구현한 SDK의 트랜잭션 처리 흐름을 파악할 수 있었다
 #### 노드 다운그레이드 하기
 Node.js v10으로 했더니 deprecated된 함수들 많아서 v8로 낮추기로 결정
 ![노드 다운그레이드 하기!](https://user-images.githubusercontent.com/95270406/172213741-05f60eee-1c56-46ae-909e-d3eb2c4841d4.jpg)
